# symctrl

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  STYLE.md  Symbolic Controls Toolbox.mltbx  Symbolic Controls Toolbox.prj  demos.xml  runTests.m
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cmake/: FindCython.cmake
ctrlanalysis/: ctrbs.m  iscontrollable.m  isobservable.m  isstable.m  lie.m  obsvs.m  phaseport.m  pole.m  reduce.m  rhtable.m  schurs.m  zero.m
ctrlanalysis/@symss/: c2d.m  canon.m  ctrb.m  d2c.m  decompose.m  elroa.m  expm.m  iscontrollable.m  isobservable.m  isstable.m  linearize.m  lyap.m  normal.m  obsv.m  reach.m  roa.m  stm.m
ctrlanalysis/@symtf/: minreal.m  rhtable.m
ctrlanalysis/properties/: iscontdiff.m
ctrldemos/: aircraft.m  ball.m  ctrldemo.m  doublependulum.m  fireflies.m  hopf.m  massspring.m  massspring2.m  nonholonomic.m  nonholonomic2.m  pendulum.m  pendulum2.m  pendulum3.m  pendulum4.m  pendulumcart.m  quadrotor.m  satellite.m  satellite2.m  thermostat.m  tunnel_diode.m  tunneldiode.m  vanderpol.m  vanderpol2.m
ctrldemos/html/: circuit.html  inverted_pendulum.html  mass_spring.html
ctrldemos/private/: ball.mat  fireflies.mat  hopf.mat  mass_spring.m  mass_spring.mat  massspring.mat  massspring2.mat  nonholonomic.mat  pendulum.m  pendulum.mat  pendulum2.mat  pendulum3.mat  pendulum4.mat  quadrotor.mat  savedemo.m  thermostat.mat  tunnel_diode.mat  tunneldiode.mat  vanderpol.mat  vanderpol2.mat
ctrldesign/@mdp/: iterpolicy.m  itervalue.m
ctrldesign/@symss/: care.m  fblin.m  lqr.m  lyapctrl.m  pid.m  place.m  slide.m  slidectrl.m
ctrllib/: ishamiltonian.m  islinear.m  islipschitz.m  islyap.m  isschur.m  issymplectic.m  lie.m  lieb.m  ordschurs.m  schurs.m
ctrllib/@symopt/: lagrangian.m  reform.m  symopt.m  symoptsolve.m
ctrllib/@symss/: care.m  dare.m  lyap.m  lyapdiff.m
ctrllib/properties/: ishurwitz.m  issymplectic.m
ctrlmodels/: StatevarTest.m  consolidate.m  eom2symss.m  eqn2symss.m  findstates.m  getsymdiff.m  getsymfuns.m  statevars.m  symss2symtf.m  symtf2symss.m
ctrlmodels/@ctrlmodel/: ctrlmodel.m
ctrlmodels/@mdp/: dspace.m  itervalue.m  mdp.m  mdpset.m  propp.m  propr.m  propr2.m
ctrlmodels/@stateeqn/: stateeqn.m
ctrlmodels/@statevar/: statevar.m
ctrlmodels/@symhyss/: subs.m  symhyss.m  validatesystem.m
ctrlmodels/@symss/: block.m  canon.m  ctrb.m  expm.m  kd.m  linearize.m  obsv.m  simplify.m  simtrans.m  subs.m  symss.m  symss2symss.m  symss2symtf.m  symssinfo.m  validatesystem.m
ctrlmodels/@symsve/: block.m  eqpt.m  linearize.m  simplify.m  subs.m  symsv.m
ctrlmodels/@symtf/: simplify.m  subs.m  symtf.m  symtf2symss.m  validatetf.m
ctrlmodels/private/: getSymbolicDerivatives.m  getSymbolicFunctions.m
ctrlplots/: gettsdata.m  plottsdata.m
ctrlplots/@symhyss/: hysim.m  plotgraph.m
ctrlplots/@symss/: effort.m  hysim.m  impulse.m  initial.m  lsim.m  mdpsim.m  nlsim.m  nlsim2.m  step.m  zir.m  zsr.m
doc/: GettingStarted.mlx  buildhelp.m  info.xml
doc/examples/: backward_reachability_example.m  bouncing_ball_example.m  controllability_example.m  dare_example.m  elastic_roa_example.m  example3.m  example5.m  example6.m  example7.m  feedback_linearization_example.m  firefly_synchronization_example.m  hybrid_system_response_example.m  inverted_pendulum.m  kalman_decomposition_example.m  linear_response_example.m  linearization_equilibrium_example.m  linearization_example.m  lqr_example.m  lyapunov_control_example.m  mass_spring.m  mass_spring_response_example.m  mdp_example.m  (+6 more)
examples/: matlab_demo.m  matlab_linalg.m
matlab/: CMakeLists.txt  README.md  STYLE.md  finish.m  loadmatctrl.m  matlab_wrapper.cc  matlab_wrapper.hpp  startup.m  unloadmatctrl.m
matlab/matctrl/+symctrl/: ctrbs.m  eig.m  eig2.m  eom2statespace.m  getsymdiff.m  getsymfuns.m  hess.m  mat2se.m  randomvars.m  schur.m  se2mat.m
matlab/matctrl/@costfunction/: costfunction.m
matlab/matctrl/@hybridsystem/: hybridsystem.m
matlab/matctrl/@mdp/: mdp.m
matlab/matctrl/@randomdevice/: randomdevice.m
matlab/matctrl/@randomdistribution/: randomdistribution.m
matlab/matctrl/@randomvar/: randomvar.m
matlab/matctrl/@statespace/: ctrb.m  obsv.m  ode_euler.m  statespace.m  subs.m
matlab/matctrl/@transferfunction/: transferfunction.m
matlab/symctrl/+symctrl/: ctrbs.m  eig.m  hess.m  schur.m
matlab/symctrl/@mdp/: mdp.m
matlab/symctrl/@statespace/: linearize.m  statespace.m  subs.m
matlab/test/: CMakeLists.txt  test_eom2statespace.m  test_ode.m  test_random_variable.m  test_state_space.m  test_symctrl.m  test_transfer_function.m
python/: CMakeLists.txt  README.md  py_wrapper.cc  py_wrapper.hpp  pyctrl.pxd  pyctrl.pyx  setup.py
symctrl/: CMakeLists.txt  README.md  analysis.cc  analysis.hpp  assert.hpp  c_wrapper.cc  c_wrapper.hpp  canonical.cc  canonical.hpp  control_model.cc  control_model.hpp  feedback_lin.hpp  hybrid.hpp  hybrid_system.cc  hybrid_system.hpp  kernel.cc  kernel.hpp  linear.hpp  lqr.hpp  mdp.cc  mdp.hpp  mdp_train.cc  mdp_train.hpp  mpc.hpp  nonlinear.hpp  ode_sim.hpp  parser.hpp  pid.hpp  sliding_mode.hpp  state.hpp  state_space.cc  state_space.hpp  stochastic.hpp  subs.hpp  symctrl.hpp  system.cc  system.hpp  tf.hpp  transfer_function.cc  transfer_function.hpp  (+2 more)
test/: CMakeLists.txt  block_diagram.m  canonTest.m  careTest.m  ctrbsTest.m  dareTest.m  eom2symssTest.m  input_derivatives_test.m  inverted_pendulum_test.m  inverted_pendulum_tf_test.m  iss1.m  iss2.m  lyapTest.m  lyapctrlTest.m  mass_spring_test.m  pendulum_cart_test.m  roaTest.m  schur_test.m  schursTest.m  symhyssTest.m  symoptTest.m  symssTest.m  symss_disp.m  symsv_no_states.m  symtfTest.m  test_analysis.cc  test_function.cc  test_kernel.cc  test_main.cc  test_matrix_block.cc  test_matrix_constant.cc  test_matrix_dense.cc  test_matrix_operations.cc  test_matrix_static.cc  test_matrix_vector.cc  test_mdp.cc  test_ode.cc  test_playground.cc  test_playground2.cc  test_random_variable.cc  (+10 more)
test/states/: test_states.cc
(+249 files in other folders)
